updated content from content_collaterv3

--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@ published: true
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <h4>General description about the Investments</h4>
-
             <p>We invest in a range of private and public equity funds in order to access great investors at each stage
                 of the capital and innovation cycle.</p>
         </div>
@@ -92,11 +90,7 @@ published: true
         <div class="revel_container">
             <h3>Direct Investments</h3>
 
-            <h4>General description about the Investment</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tellus felis, ornare vel nulla non,
-                porttitor congue enim. Cras vehicula nisi eu tellus suscipit vestibulum. Integer congue at velit sit
-                amet feugiat. Maecenas vehicula placerat iaculis. Donec pulvinar pellentesque orci ut congue.</p>
+            <p>Sagamore seeks direct investment opportunities in non-strategic, but essential sectors in China such as agriculture, financial services and consumer products.</p>
         </div>
     </header>
     <div class="revel_section_content">
@@ -144,12 +138,8 @@ published: true
     <header>
         <div class="revel_container">
             <h3>History</h3>
-
-            <h4>Summary of the history of the company</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tellus felis, ornare vel nulla non,
-                porttitor congue enim. Cras vehicula nisi eu tellus suscipit vestibulum. Integer congue at velit sit
-                amet feugiat. Maecenas vehicula placerat iaculis. Donec pulvinar pellentesque orci ut congue.</p>
+            
+            <p>Sagamore's founders have worked together since 2002 and have invested in over 100 funds and companies in Asia and the US. Sagamore's first investments focused on biotechnology and expanded to fund and direct investments in China with Sagamore China Partners (SCP) I in 2006. The team raised subquent funds SCP II and SCP III in 2010 and 2013. In total, Sagamore has over $250m in assets under management for investing in opportunities in China.</p>
         </div>
     </header>
     <div class="revel_section_content">
@@ -167,8 +157,6 @@ published: true
     <header>
         <div class="revel_container ">
             <h3>Team</h3>
-
-            <h4>General description about the Team</h4>
 
             <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai (operations).</p>
         </div>
@@ -203,9 +191,7 @@ published: true
         <div class="revel_container">
             <h3>Contact</h3>
 
-            <h4>General description about contacting</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur cum error est inventore ipsa libero reiciendis repellendus ullam ut. Assumenda harum minima nostrum placeat qui? Ab culpa mollitia temporibus.</p>
+            <p>Sagamore has offices in Beijing, Hong Kong and Shanghai. We are always looking for exciting business opportunities and new talent to join our team. Please <span class="link"><a href="mailto:info@sagainv.com"> contact us</a></span>  for more information.</p>
         </div>
     </header>
     <div class="revel_section_content">
