updated contact section style

--- a/index.html
+++ b/index.html
@@ -215,8 +215,10 @@ published: true
             <div class="revel_column_dd_span4">
                 <div class="revel_service_box revel_service_box_square">
                     <div class="revel_service_box_header">
-                        <div class="contact_icons">
-                            &nbsp;
+                        <div class="contact_bg">
+                            <div class="contact_icons">
+                                &nbsp;
+                            </div>
                         </div>
                         <h3>{{ contact.title }}</h3>
                     </div>
