updated history image

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ published: true
         <div class="revel_container">
             <div class="revel_column_dd_span12 aligncenter">
                 <div class="revel-animo" data-animation="fadeInUp" data-duration="1000" data-delay="0">
-                    <img src="images/ipad_img.jpg" alt="">
+                    <img src="images/history.png" alt="">
                 </div>
             </div>
         </div>
