--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ published: true
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai (operations).</p>
+            <p>Led by seasoned entrepreneurs, founders Ed Cumberlege and Bella Liu, the firm's six professionals are based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai (operations).</p>
         </div>
     </header>
     <div class="revel_section_content">
