--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ published: true
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <p>We invest in a range of private and public equity funds in order to access great investors at each stage
+            <p>We invest in private and public equity funds in order to access great investors at each stage
                 of the capital and innovation cycle.</p>
         </div>
     </header>
