--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: sagamore
 title: Sagamore
 published: true
+history:
+  - item: <span class="main_color">2002</span> Firm established and first investments made in biotechnology
+  - item: <span class="main_color">2006</span> Sagamore China Partners I (SCP I)
+  - item: <span class="main_color">2009</span> Sagamore China Partners II (SCP II)
+  - item: <span class="main_color">2013</span> Sagamore China Partners III (SCP III)
+  - item: <span class="main_color">2015</span> Sagamore China Partners IV (SCP IV)
 ---
 
 <section id="abdev_main_slider">
@@ -144,7 +150,13 @@ published: true
         <div class="revel_container">
             <div class="revel_column_dd_span12 aligncenter">
                 <div class="revel-animo" data-animation="fadeInUp" data-duration="1000" data-delay="0">
-                    <img src="images/history.png" alt="">
+                    <ul>
+                        {% for history in page.history %}
+                        <li>
+                            {{ history.item }}
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
