--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: sagamore
 title: Sagamore
 published: true
 history:
-  - item: <span class="main_color">2002</span> Firm established and first investments made in biotechnology
+  - item: <span class="main_color">2002</span> Firm Established
   - item: <span class="main_color">2006</span> Sagamore China Partners I (SCP I)
   - item: <span class="main_color">2009</span> Sagamore China Partners II (SCP II)
   - item: <span class="main_color">2013</span> Sagamore China Partners III (SCP III)
