--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ history:
                 <div class="revel_team_member revel_team_member_style_1 revel-animo" data-animation="fadeInUp" data-duration="1000" data-delay="0">
                     <div class="revel_overlayed hoverable">
                         <div class="overlay_front">
-                            <img src="{{ member.image }}" alt="{{ member.name }}">
+                            <img src="{{ member.image }}" alt="{{ member.name }}" width="246" height="246">
                             <div class="revel_team_member_link">
                                 <span class="revel_team_member_name">{{ member.name }}</span>
                                 <span class="revel_team_member_position">{{ member.position }}</span>
