--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: sagamore
 title: Sagamore
 published: true
-history:
-  - item: <span class="main_color">2002</span> Firm Established
-  - item: <span class="main_color">2006</span> Sagamore China Partners I (SCP I)
-  - item: <span class="main_color">2009</span> Sagamore China Partners II (SCP II)
-  - item: <span class="main_color">2013</span> Sagamore China Partners III (SCP III)
-  - item: <span class="main_color">2015</span> Sagamore China Partners IV (SCP IV)
+history: 
+  - item: "<span class=\"main_color\">2002</span> Firm Established"
+  - item: "<span class=\"main_color\">2006</span> Sagamore China Partners I (SCP I)"
+  - item: "<span class=\"main_color\">2009</span> Sagamore China Partners II (SCP II)"
+  - item: "<span class=\"main_color\">2013</span> Sagamore China Partners III (SCP III)"
+  - item: "<span class=\"main_color\">2015</span> Sagamore China Partners IV (SCP IV)"
 ---
 
 <section id="abdev_main_slider">
@@ -65,7 +65,7 @@ history:
             <h3>Fund Investments</h3>
 
             <p>We invest in private and public equity funds in order to access great investors at each stage
-                of the capital and innovation cycle.</p>
+                of the capital and innovation cycle. We have made over 40 targeted investments in funds with top-tier managers and key sector focus. A select sample is presented below.</p>
         </div>
     </header>
     <div class="revel_section_content">
