update contact us email

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ history:
         <div class="revel_container">
             <h3>Contact</h3>
 
-            <p>Sagamore has offices in Beijing, Hong Kong and Shanghai. We are always looking for exciting business opportunities and new talent to join our team. Please <span class="link main_color"><strong><a href="mailto:info@sagainv.com"> contact us</a></strong></span>  for more information.</p>
+            <p>Sagamore has offices in Beijing, Hong Kong and Shanghai. We are always looking for exciting business opportunities and new talent to join our team. Please <span class="link"><strong><a href="mailto:info@sagainv.com" class="main_color"> contact us</a></strong></span>  for more information.</p>
         </div>
     </header>
     <div class="revel_section_content">
