update history style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: sagamore
 title: Sagamore
 published: true
 history: 
-  - item: "<span class=\"main_color\">2002</span> Firm Established"
-  - item: "<span class=\"main_color\">2006</span> Sagamore China Partners I (SCP I)"
-  - item: "<span class=\"main_color\">2009</span> Sagamore China Partners II (SCP II)"
-  - item: "<span class=\"main_color\">2013</span> Sagamore China Partners III (SCP III)"
-  - item: "<span class=\"main_color\">2016</span> Sagamore China Partners IV (SCP IV)"
+  - item: "2002 Firm Established"
+  - item: "2006 Sagamore China Partners I (SCP I)"
+  - item: "2009 Sagamore China Partners II (SCP II)"
+  - item: "2013 Sagamore China Partners III (SCP III)"
+  - item: "2016 Sagamore China Partners IV (SCP IV)"
 ---
 
 <section id="abdev_main_slider">
