--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: sagamore
 title: Sagamore
 published: true
 history: 
-  - item: "2002 Firm Established"
-  - item: "2006 Sagamore China Partners I (SCP I)"
-  - item: "2010 Sagamore China Partners II (SCP II)"
-  - item: "2013 Sagamore China Partners III (SCP III)"
-  - item: "2016 Sagamore China Partners IV (SCP IV)"
+  - item: 2002 Firm Established
+  - item: 2006 Sagamore China Partners I (SCP I)
+  - item: 2010 Sagamore China Partners II (SCP II)
+  - item: 2013 Sagamore China Partners III (SCP III)
+  - item: 2016 Sagamore China Partners IV (SCP IV)
 ---
 
 <section id="abdev_main_slider">
@@ -65,7 +65,7 @@ history:
             <h3>Fund Investments</h3>
 
             <p>We invest in private and public equity funds in order to access great investors at each stage
-                of the capital and innovation cycle. We have made over 40 targeted investments in funds with top-tier managers and key sector focus. A select sample is presented below.</p>
+                of the capital and innovation cycle. We have made over 50 targeted investments in China-focused funds with top-tier managers and key sector exposure. A select sample is presented below.</p>
         </div>
     </header>
     <div class="revel_section_content">
