--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: sagamore
 title: Sagamore
 published: true
-history:
+history: 
   - date: 2002
     content: Firm Established
   - date: 2006
@@ -14,6 +14,7 @@ history:
   - date: 2016
     content: Sagamore China Partners IV
 ---
+
 
 <section id="abdev_main_slider">
     <div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullscreen-container"
@@ -181,7 +182,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's eight professionals are
                 based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai
                 (operations).</p>
         </div>
