--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's eight professionals are
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's seven professionals are
                 based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai
                 (operations).</p>
         </div>
