--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ history:
 
 
 
+
 <section id="abdev_main_slider">
     <div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullscreen-container"
          style="background-color:#E9E9E9;padding:0px;">
@@ -158,7 +159,7 @@ history:
             <p>Sagamore's founders have worked together since 2002 and have invested in over 100 funds and companies in
                 Asia and the US. Sagamore's first investments focused on biotechnology and expanded to fund and direct
                 investments in China with Sagamore China Partners I (SCP I) in 2006. The team raised subsequent funds SCP
-                II and SCP III in 2010 and 2013. In total, Sagamore has over $250m in assets under management for
+                II (2010), SCP III (2013) and SCP IV (2016). In total, Sagamore has over $400m in assets under management for
                 investing in opportunities in China.</p>
         </div>
     </header>
