--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: sagamore
 title: Sagamore
 published: true
-history: 
+history:
   - date: 2002
     content: Firm Established
   - date: 2006
@@ -184,9 +184,8 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's seven professionals are
-                based in Beijing (sourcing and diligence), Hong Kong (investment analytics) and Shanghai
-                (operations).</p>
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's five professionals are
+                based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
         </div>
     </header>
     <div class="revel_section_content">
