--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ history:
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <p>We invest in private and public equity funds in order to access great investors at each stage
-                of the capital and innovation cycle. We have made over 50 targeted investments in China-focused funds
+            <p>We invest in venture capital funds, growth capital funds and late-stage private equity funds in order to access great investors at each stage
+                of the capital and innovation cycle. We have made over 60 targeted investments in China-focused funds
                 with top-tier managers and key sector exposure. A select sample is presented below.</p>
         </div>
     </header>
