--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's five professionals are
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are
                 based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
         </div>
     </header>
