--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ history:
         <div class="revel_container">
             <h3>Contact</h3>
 
-            <p>Sagamore has offices in Beijing, Hong Kong and Shanghai. We are always looking for exciting business
+            <p>Sagamore has offices in Beijing and Hong Kong. We are always looking for exciting business
                 opportunities and new talent to join our team. Please <span class="link"><strong><a
                         href="mailto:info@sagainv.com" class="main_color"> contact us</a></strong></span> for more
                 information.</p>
