Remove Hedge Funds

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ history:
             <h3>Fund Investments</h3>
 
             <p>We invest in venture capital funds, growth capital funds and late-stage private equity funds in order to access great investors at each stage
-                of the capital and innovation cycle. We have made over 60 targeted investments in China-focused funds
+                of the capital and innovation cycle. We have made over 70 targeted investments in China-focused funds
                 with top-tier managers and key sector exposure. A select sample is presented below.</p>
         </div>
     </header>
@@ -104,8 +104,7 @@ history:
         <div class="revel_container">
             <h3>Direct Investments</h3>
 
-            <p>Sagamore seeks direct investment opportunities in non-strategic, but essential sectors in China such as
-                agriculture, financial services and consumer products.</p>
+            <p>Sagamore seeks direct investment opportunities in line with China's consumption upgrade, looking at sectors including fintech, healthcare, artificial intelligence, and education.</p>
         </div>
     </header>
     <div class="revel_section_content">
@@ -184,7 +183,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six professionals are
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six investment professionals are
                 based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
         </div>
     </header>
