Remove Private Equity
Remove Private Equity

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ history:
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <p>We invest in venture capital funds, growth capital funds and late-stage private equity funds in order to access great investors at each stage
-                of the capital and innovation cycle. We have made over 70 targeted investments in China-focused funds
+            <p>We invest in venture capital funds and growth capital funds in order to access great investors at each stage
+                of the capital and innovation cycle. We have made over 75 targeted investments in China-focused funds
                 with top-tier managers and key sector exposure. A select sample is presented below.</p>
         </div>
     </header>
@@ -183,7 +183,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's six investment professionals are
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's seven investment professionals are
                 based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
         </div>
     </header>
