--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ history:
     content: Sagamore China Partners III
   - date: 2016
     content: Sagamore China Partners IV
+  - date: 2018
+    content: Sagamore China Partners V
 ---
 
 
@@ -158,8 +160,7 @@ history:
             <p>Sagamore's founders have worked together since 2002 and have invested in over 100 funds and companies in
                 Asia and the US. Sagamore's first investments focused on biotechnology and expanded to fund and direct
                 investments in China with Sagamore China Partners I (SCP I) in 2006. The team raised subsequent funds SCP
-                II (2010), SCP III (2013) and SCP IV (2016). In total, Sagamore has over $500m in assets under management for
-                investing in opportunities in China.</p>
+                II (2010), SCP III (2013), SCP IV (2016) and SCP V (2018). In total, Sagamore has over $500m in assets under management for investing in opportunities in China.</p>
         </div>
     </header>
     <div class="revel_section_content">
