--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's seven investment professionals are
-                based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
+            <p>The firm's investment professionals are led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang.</p>
         </div>
     </header>
     <div class="revel_section_content">
