--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@ history:
         <div class="revel_container">
             <h3>Fund Investments</h3>
 
-            <p>We invest in venture capital funds and growth capital funds in order to access great investors at each stage
-                of the capital and innovation cycle. We have made over 75 targeted investments in China-focused funds
-                with top-tier managers and key sector exposure.</p>
+            <p>We partner with venture capital funds and growth capital funds in order to access category leading companies at each stage of the capital and innovation cycle.</p>
         </div>
     </header>
     <div class="revel_section_content">
@@ -106,7 +104,7 @@ history:
         <div class="revel_container">
             <h3>Direct Investments</h3>
 
-            <p>Sagamore seeks direct investment opportunities in line with China's consumption upgrade, looking at sectors including fintech, healthcare, artificial intelligence, and education.</p>
+            <p>Sagamore seeks to partner with founders building businesses in line with China's consumption upgrade, looking at sectors including fintech, healthcare, artificial intelligence, and education.</p>
         </div>
     </header>
     <div class="revel_section_content">
@@ -159,24 +157,9 @@ history:
 
             <p>Sagamore's founders have worked together since 2002 and have invested in over 100 funds and companies in
                 Asia and the US. Sagamore's first investments focused on biotechnology and expanded to fund and direct
-                investments in China with Sagamore China Partners I (SCP I) in 2006. The team launched subsequent funds SCP
-                II (2010), SCP III (2013), SCP IV (2016) and SCP V (2018).</p>
+                investments in China with Sagamore China Partners in 2006.</p>
         </div>
     </header>
-    <div class="revel_section_content">
-        <div class="revel_container">
-            {% for history in page.history %}
-            <div class="revel_column_dd_span4 aligncenter">
-                <div class="timeline">
-                    {{ history.date }}
-                </div>
-                <div class="desc">
-                    {{ history.content }}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
 </section>
 
 <section id="team" class="revel_section_dd section-users section_with_gray_background">
