--- a/Old/sagamore_headerOLD.html
+++ b/Old/sagamore_headerOLD.html
@@ -11,6 +11,7 @@
                 <li><a href="#fund_investments" class="scroll">Fund Investments</a></li>
                 <li><a href="#direct_investments" class="scroll">Direct Investments</a></li>
                 <li><a href="#history" class="scroll">History</a></li>
+                <li><a href="#team" class="scroll">Team</a></li>
                 <li><a href="#contact" class="scroll">Contact</a></li>
             </ul>
         </nav>
