--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ history:
         <div class="revel_container ">
             <h3>Team</h3>
 
-            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the firm's seven investment professionals are
-                based in Beijing (sourcing and diligence) and Hong Kong (investment analytics).</p>
+            <p>Led by seasoned entrepreneurs, founders Peter Brooks and Rodrigo Yang, the team is
+                based in Beijing, Hong Kong and Singapore.</p>
         </div>
     </header>
     <div class="revel_section_content">
